--- a/django_project/vercel.json
+++ b/django_project/vercel.json
@@ -7,9 +7,17 @@
                 "maxLambdaSize": "15mb",
                 "runtime": "python3.11"
             }
+        },
+        {
+            "src": "staticfiles/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/staticfiles/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "django_project/wsgi.py"
