--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==5.2.7
 django-cache-url==3.4.5
 django-crispy-forms==2.2
 environs==11.0.0
+gunicorn==22.0.0
 marshmallow==4.0.1
 mypy_extensions==1.1.0
 packaging==25.0
